Tweaks for 2.0.52, and libressl fix.
Change-Id: I1da16ea4e0497644e6801416a90711b7b5164c04

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+2016-11-07 Changes in burp-2.0.52:
+  * Make compilation with openssl-1.1.0 work.
+  * Fix for client side autoupgrade.
+  * Rename 'enum page' so that compilation on Solaris 10 works.
+
 2016-11-02 Changes in burp-2.0.50:
   * Bug fix for excluding directories directly inside /.
   * Fix for dindex regeneration concurrency accidently resulting in
