Allow removing of arbitrary strings from res. path

--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -787,6 +787,9 @@ Number of leading path components to strip. Equivalent to '\-s' when initiating 
 \fBrestoreprefix=[path]\fR
 Prefix to the restore path. Equivalent to '\-d' when initiating a restore from the client.
 .TP
+\fBstripfrompath=[string]\fR
+Strip matching string from restore paths (before prefix is prepended).
+.TP
 \fBregex=[regular expression]\fR
 Only restore files matching the regular expression. Equivalent to '\-r' when initiating a restore from the client.
 .TP
