--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -393,7 +393,7 @@ The same as notify_success_arg, but for backups that failed.
 Enables you to group clients together for file deduplication purposes. For example, you might want to set 'dedup_group=xp' for each Windows XP client, and then run the bedup program on a cron job every other day with the option '\-g xp'.
 .TP
 \fBserver_script_pre=[path]\fR
-Path to a script to run on the server after each successfully authenticated connection but before any work is carried out. The arguments to it are 'pre', '(client command)', 'reserved3' to 'reserved5', and then arguments defined by server_script_pre_arg. If the script returns non-zero, the task asked for by the client will not be run. This command and related options can be overriddden by the client configuration files in clientconfdir on the server.
+Path to a script to run on the server after each successfully authenticated connection but before any work is carried out. The arguments to it are 'pre', '(client command)', '(client name)', '(0 or 1 for success or failure)', '(timer script exit code)', and then arguments defined by server_script_pre_arg. If the script returns non-zero, the task asked for by the client will not be run. This command and related options can be overriddden by the client configuration files in clientconfdir on the server.
 .TP
 \fBserver_script_pre_arg=[string]\fR
 A user-definable argument to the server pre script. You can have many of these.
@@ -402,7 +402,7 @@ A user-definable argument to the server pre script. You can have many of these.
 Turn on to send a notification email when the server pre script returns non-zero. The output of the script will be included in the email. The default is off. Most people will not want this turned on because clients usually contact the server at 20 minute intervals and this could cause a lot of emails to be generated. Requires the notify_failure options to be set.
 .TP
 \fBserver_script_post=[path]\fR
-Path to a script to run on the server before the client disconnects. The arguments to it are 'post', '(client command)', 'reserved3' to 'reserved5', and then arguments defined by server_script_post_arg. This command and related options can be overriddden by the client configuration files in clientconfdir on the server.
+Path to a script to run on the server before the client disconnects. The arguments to it are 'post', '(client command)', '(client name), '(0 or 1 for success or failure)', '(timer script exit code)', and then arguments defined by server_script_post_arg. This command and related options can be overriddden by the client configuration files in clientconfdir on the server.
 .TP
 \fBserver_script_post_arg=[string]\fR
 A user-definable argument to the server post script. You can have many of these.
