--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+burp (2.0.53-1) UNRELEASED; urgency=low
+  * New upstream release
+
+ -- Terje Bakken <terje@terki.no>  Tue, 23 Dec 2016 00:11:00 +0100
+
 burp (1.3.26-2) experimental; urgency=low
 
   * Reformated changelog
