--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,17 @@
+2017-01-01 Changes in burp-2.1.0:
+ * Fix certificate and csr permissions on receive_a_file().
+ * Fix for metadata restore removing security capabilities.
+ * Fix for 'burp -a S' not outputting all clients.
+ * Compile and run utests on Windows.
+ * Delete unused Windows build code and icons.
+ * Update manpage for server_script_pre/server_script_post.
+ * Upgrade Windows dpkgs to openssl-1.1.0c and pcre-8.39.
+
+2017-01-01 Changes in burp-2.0.54:
+ * Fix certificate and csr permissions on receive_a_file().
+ * Fix for metadata restore removing security capabilities.
+ * Fix for 'burp -a S' not outputting all clients.
+
 2016-11-07 Changes in burp-2.0.52:
   * Make compilation with openssl-1.1.0 work.
   * Fix for client side autoupgrade.
