--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -250,7 +250,7 @@ Path to the directory in which to store backups.
 When turned on (which is the default) and the client is on version 1.3.6 or greater, the structure of the storage directory will mimic that of the original filesystem on the client.
 .TP
 \fBtimestamp_format=[strftime format]\fR
-This allows you to tweak the format of the timestamps of individual backups. See 'man strftime' to see available substitutions. If this option is unset, burp uses "%Y-%m-%d %H:%M:%S".
+This allows you to tweak the format of the timestamps of individual backups. See 'man strftime' to see available substitutions. If this option is unset, burp uses "%Y-%m-%d %H:%M:%S %z".
 .TP
 \fBpassword_check=[0|1]\fR
 Allows you to turn client password checking on or off. The default is on. SSL certificates will still be checked if you turn passwords off. This option can be overridden by the client configuration files in clientconfdir on the server.
