--- a/src/win32/README
+++ b/src/win32/README
@@ -6,9 +6,12 @@ First you need to get a working cross compile area set up.
 Go to http://burp.grke.net/ and follow the links to download:
 burp-cross-tools-(latest.version).tar.bz2
 
-Unpack it in the same directory in which you unpacked the burp source, and
-go into the directory called 'source'. Follow the instructions in the README
-files. This will install cross compilers for both 32bit and 64bit clients.
+Unpack the archive in the same top-level directory in which you downloaded
+the burp sources, and go into the directory called 'source'.
+You should have the burp source directory and the burp-cross-tools directory
+at the same level.
+Follow the instructions in the README files.
+This will install cross compilers for both 32bit and 64bit clients.
 
 
 Then you need to build the burp dependencies.
@@ -16,9 +19,12 @@ Then you need to build the burp dependencies.
 Go to http://burp.grke.net/ and follow the links to download:
 burp-depkgs-(latest.version).tar.bz2
 
-Unpack them in the same directory in which you unpacked the burp source, and
-go into the directory called 'source'. Follow the instructions in the README
-files. This will install the dependencies for both 32bit and 64bit clients.
+Unpack them in the same top-level directory in which you downloaded
+the burp sources, and go into the directory called 'source'.
+You should have the burp source directory and the burp-depkgs directory
+at the same level.
+Follow the instructions in the README files.
+This will install the dependencies for both 32bit and 64bit clients.
 
 Once these have been built successfully, you can build the burp installers
 themselves.
@@ -26,9 +32,11 @@ themselves.
 Change to the burp source directory.
 
 Standing in src/win32, run the following:
-make		(for 32bit clients)
-make WIN64=yes	(for 64bit clients)
+
+  make            (for 32bit clients)
+  make WIN64=yes  (for 64bit clients)
 
 All being well, the installer file will appear in:
-release32	(for 32bit clients)
-release64	(for 64bit clients)
+
+  release32       (for 32bit clients)
+  release64       (for 64bit clients)
