--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,7 @@
 2017-10-01 Changes in burp-2.1.22:
+  * Fix travis for osx, where brew is now installing librsync 2.0.1.
+  * On certificate exchange, do not rewrite the client config file if there
+    are no changes.
   * Limit 'set file owner' warnings on restore when not root
   * On restore, don't send Windows VSS directory data to non-Windows clients.
   * On restore, don't send to split VSS data to non-Windows.
