--- a/README
+++ b/README
@@ -4,17 +4,17 @@ Quick start
 The following assumes that you are not installing the burp server via a
 distribution's package management system.
 
-You need to compile burp on a unix-based operating system first. Make sure that
-you have openssl, zlib, librsync, uthash and yajl libraries and development
-libraries installed.
+You need to compile burp on a unix-based operating system first. Make sure
+that you have openssl, zlib, librsync, and uthash libraries and development
+packages installed.
 
 With debian or ubuntu, this command should install them for you:
   apt-get install make pkg-config check g++ \
-	librsync-dev libz-dev libssl-dev uthash-dev libyajl-dev
+	librsync-dev libz-dev libssl-dev uthash-dev
 
 With RHEL or CentOS, this command should install them for you:
   yum install make gcc gcc-c++ bzip2 pkgconfig \
-        librsync-devel libzip-devel openssl-devel uthash-devel yajl-devel \
+        librsync-devel libzip-devel openssl-devel uthash-devel \
         libacl-devel ncurses-devel openssl-perl
 
 If you are checking out directly from git, you will also need to get some
