--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,20 @@
+2018-09-01 Changes in burp-2.2.10:
+  * 737, 738: Multiple listen addresses.
+  * 747: Fix for ACLs not getting restored on directories, and fix metadata
+    client side counters.
+  * 744: Fix for truncated .created file.
+  * 750: fail_on_warning config option.
+  * From ziirish:
+    - 742: Clarify backup_script_pre documentation.
+    - 746: Add '-o' flag to override configuration options on the command line.
+    - 3: Implement 'include_regex' .
+  * From deajan and hakong:
+    - 740: Updates for backup tool script, including calendar.
+  * From pablodav:
+    - Fix Windows upgrade script getting stuck after execution.
+  * Add j:response-markers-on/off monitor commands.
+  * Fix utests for travis mac builds, they have a new gzip version.
+
 2018-08-01 Changes in burp-2.2.8:
   * Do not try to log remotely with client side post_scripts.
   * 693: Fix RS_BLAKE2_SIG_MAGIC detection.
