--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,20 @@
+2018-10-01 Changes in burp-2.2.12:
+  * From ziirish:
+    - 253: 'logic' rules parser with new exclude_logic option.
+  * 753: Send error to server when there is a VSS problem.
+  * 754: Fixes for find_logic code.
+  * 756: Man page correction about number of notify args.
+    Also rename 'warnings' to 'warning_count' in notify_script.
+  * 675: Stdout command line options.
+    '-v' now overrides stdout=0 in the config file, to be 1.
+    '-Q' now overrides stdout=1 in the config file, to be 0, and turns
+         off the progress counter.
+    '-v' used to be the version option - that is now '-V'.
+  * 743: Fix broken status monitor command parsing.
+  * 759: Log backup start/resume/complete/failure in the main log.
+  * 760: Fix and prevent possibility of infinite loops on error in asfd code.
+  * 758, 763: Read errors should interrupt backing up a file.
+
 2018-09-01 Changes in burp-2.2.10:
   * 737, 738: Multiple listen addresses.
   * 747: Fix for ACLs not getting restored on directories, and fix metadata
