--- a/CHANGELOG
+++ b/CHANGELOG
@@ -22,7 +22,7 @@
     - Fix compiler warnings.
   * Remove LT_INIT, it seems to cause more problems than it solves.
   * Fix 'PACKAGE_URL undeclared' for older versions of autoconf.
-  * From deajan:
+  * From Orsiris de Jong:
     - Backup tool script minor fixes
 
 2019-02-23 Changes in burp-2.2.18:
@@ -37,7 +37,7 @@
   * Remove non-widechar Windows functions.
   * From Calogero Lo Leggio:
     - Remove debian packaging files from upstream repository
-  * From deajan:
+  * From Orsiris de Jong:
     - Backup tool script 0.4.6.
 
 2019-01-01 Changes in burp-2.2.16:
@@ -101,7 +101,7 @@
     - 742: Clarify backup_script_pre documentation.
     - 746: Add '-o' flag to override configuration options on the command line.
     - 3: Implement 'include_regex' .
-  * From deajan and hakong:
+  * From Orsiris de Jong and hakong:
     - 740: Updates for backup tool script, including calendar.
   * From pablodav:
     - Fix Windows upgrade script getting stuck after execution.
@@ -148,7 +148,7 @@
     - mingw-w64-v5.0.3
     - mpc-1.1.0
     - mpfr-4.0.1
-  * From deajan:
+  * From Orsiris de Jong:
     - 703: Add server port to Windows installer.
     - 693: Update Windows to librsync-2.0.2.
   * 693: Increase protocol1 strong length from 8 to 16.
@@ -160,7 +160,7 @@
   * 680: Strip trailing slashes from cross_filesystem option.
   * 689: Make list show working/finishing backups.
   * 707: Fix superfluous newlines on file vanished warnings.
-  * From deajan:
+  * From Orsiris de Jong:
          - 661: Add backup_tool_script housekeeping script.
   * All the fixes from burp-2.1.32.
 
@@ -169,7 +169,7 @@
          use of hostname for cname.
   * 698: Fix for 'could not open current/incexc' warning on first backup.
   * 699: Remove use of strcasestr so that AIX is happy.
-  * From deajan:
+  * From Orsiris de Jong:
     - 701: Fix for broken Windows installer command line switches.
     - Man page tweak for rblk_memory_max.
   * From jirib:
@@ -182,7 +182,7 @@
   * Bug fix for some utests accidentally closing stdin.
   * Protocol 2: Hash table for rblk lookups on restore/verify.
     Add rblk_memory_max option for configuring its size.
-  * From deajan:
+  * From Orsiris de Jong:
     - Replaced bits (b) with bytes (B) for quotas in man page.
   * From John Stoffel:
     - configure check for pkg-config.
@@ -251,7 +251,7 @@
     path, such as openbsd.
   * From josvo:
     - Use ComputerName from Windows registry as suggested cname.
-  * From deajan:
+  * From Orsiris de Jong:
     - Added /nopowermode option to the Windows installer, with checkbox.
       This allows you to run timed backups when the laptop is not plugged in.
     - Update README and src/win32/README files.
@@ -289,13 +289,13 @@
   * Follow AC_INIT defines throughout the codebase, including the Windows
     installer.
   * Log strerror(errno) when failing to write a lock.
-  * From deajan:
+  * From Orsiris de Jong:
     - Add systemd file for running Burp without root privileges.
 
 2017-08-01 Changes in burp-2.1.14:
   * From Marek Szuba:
     - Use pkg-config to detect ncurses.
-  * From deajan:
+  * From Orsiris de Jong:
     - Fix burp service file for RHEL / CentOS 7 - should be 'forking'.
   * From Xaltonon:
     - Add proper key-derivation (and IV) for client encryption.
